# my-second-dbt

./: .env  .gitignore  Makefile  README.md  pyproject.toml
orchestration/: __init__.py
orchestration/airflow/: airflow.cfg
orchestration/assets/: __init__.py
the_project/: dbt_project.yml
the_project/config/: profiles.yml
the_project/macros/: create_index.sql  generate_schema_name.sql  index_creator.sql
the_project/models/docs/: docs_blocks.md  marts_schema.yml  src_schema.yml  stg_schema.yml
the_project/models/marts/: dim_customers.sql  dim_products.sql  schema.yml
the_project/models/staging/: customers.sql  order_items.sql  orders.sql  products.sql  src_big_star_db.yml  src_schema.yml  stg_big_star_db.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_schema.yml
the_project/seeds/: ref_countries.csv  schema.yml
the_project/tests/: no_order_without_item.sql
