[project]
name = "my-second-dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernando Abreu",email = "49952773+nandoabreu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dbt-core (>=1.10.4,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "dbt (>=1.0.0.40.5,<2.0.0.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
