[project]
name = "my-second-dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernando Abreu",email = "49952773+nandoabreu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<=3.13.3"
dependencies = [
    "dbt-core (>=1.10.4,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "dbt (>=1.0.0.40.5,<2.0.0.0.0)",
]
package-mode = false

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.dagster.dependencies]
dagster = "^1.11.2"
dagster-webserver = "^1.11.2"
dagster-dbt = "^0.27.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
