[project]
name = "my-second-dbt"
version = "0.2.0"
description = ""
authors = [
    {name = "Fernando Abreu",email = "49952773+nandoabreu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<=3.13.3"
dependencies = [
    "tomli (>=2.2.1); python_version<'3.11'",
    "python-decouple (>=3.8,<4.0)",
    "dbt-core (>=1.7.0,<1.8.0)",
    "dbt (>=1.0.0.40.5,<2.0.0.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dbt-mysql (>=1.7.0,<2.0.0)",
]
package-mode = false

[tool.poetry.group.orchestrators.dependencies]
apache-airflow = "^2.7.2"
astronomer-providers = "^1.19.4"
#dagster = "^1.11.2"
#dagster-webserver = "^1.11.2"
#dagster-dbt = "^0.27.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
